test_output/for_nested.out
Error in /home/dustin/Documents/cs5300/project/tests/integration/../../../test_output/for_nested.asm line 189 column 2: "li": Too few or incorrectly formatted operands. Expected: li $t1,-100
Error in /home/dustin/Documents/cs5300/project/tests/integration/../../../test_output/for_nested.asm line 190 column 2: "addi": Too few or incorrectly formatted operands. Expected: addi $t1,$t2,-100
Error in /home/dustin/Documents/cs5300/project/tests/integration/../../../test_output/for_nested.asm line 191 column 2: "beq": Too few or incorrectly formatted operands. Expected: beq $t1,$t2,label
Error in /home/dustin/Documents/cs5300/project/tests/integration/../../../test_output/for_nested.asm line 197 column 2: "lw": Too few or incorrectly formatted operands. Expected: lw $t1,-100($t2)
Error in /home/dustin/Documents/cs5300/project/tests/integration/../../../test_output/for_nested.asm line 223 column 2: "la": Too few or incorrectly formatted operands. Expected: la $t1,($t2)
Error in /home/dustin/Documents/cs5300/project/tests/integration/../../../test_output/for_nested.asm line 234 column 2: "lw": Too few or incorrectly formatted operands. Expected: lw $t1,-100($t2)
Error in /home/dustin/Documents/cs5300/project/tests/integration/../../../test_output/for_nested.asm line 240 column 2: "sw": Too few or incorrectly formatted operands. Expected: sw $t1,-100($t2)
Error in /home/dustin/Documents/cs5300/project/tests/integration/../../../test_output/for_nested.asm line 246 column 2: "lw": Too few or incorrectly formatted operands. Expected: lw $t1,-100($t2)
Error in /home/dustin/Documents/cs5300/project/tests/integration/../../../test_output/for_nested.asm line 253 column 2: "beq": Too few or incorrectly formatted operands. Expected: beq $t1,$t2,label
Error in /home/dustin/Documents/cs5300/project/tests/integration/../../../test_output/for_nested.asm line 295 column 2: "addi": Too few or incorrectly formatted operands. Expected: addi $t1,$t2,-100
Error in /home/dustin/Documents/cs5300/project/tests/integration/../../../test_output/for_nested.asm line 296 column 2: "sw": Too few or incorrectly formatted operands. Expected: sw $t1,-100($t2)

Processing terminated due to errors.
